<resources>
    <string name="app_name">EventBusMVPDemo</string>
    <string name="oops">Oops!</string>
    <string name="no_orders_found">No orders found.</string>
    <string name="name_label">Name:</string>
    <string name="address_label">Address</string>
    <string name="orders">Orders</string>
    <string name="retry">Retry</string>
    <string name="network_error_message">Oops, something went wrong!</string>
    <string name="dismiss">Ok</string>
    <string name="security_error_message">Please log in</string>
    <string name="submit">Submit</string>
</resources>
